templates/fleetman-full.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetman-deployment
spec:
  selector:
    matchLabels:
      app: fleetman
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: fleetman
    spec:
      containers:
      - name: fleetman-container
        image: richardchesterwood/k8s-fleetman-helm-demo:v1.0.0-dev
        ports:
         - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-service
spec:
  selector:
    app: fleetman
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
